# jarvis-shell

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.claude/: settings.json  settings.local.json
.claude/commands/: add-issue.md  close-issue.md  implement-issue.md  issues.md  refactoring.md  release.md
.cursor/commands/: add-issue.md  add-todo.md  close-issue.md  fix-todo.md  implement-issue.md  implement-todo.md  issues.md  refactoring.md  release.md
.cursor/plans/: fix_parser_issues_17a2794d.plan.md  iron_man_color_theme_54d67ba3.plan.md  jarvis_ai_enhancement_f6bd8ee0.plan.md  phase_1_repl_engine_3b0ce39d.plan.md  phase_2_black_box_365531be.plan.md
.cursor/rules/: general.mdc
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
08/e39552d155/: metadata.json
08/e39552d155/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
0d/034ccc7e09/: metadata.json
0d/034ccc7e09/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
32/5334ad19e9/: metadata.json
32/5334ad19e9/0/: content_hash.txt  full.jsonl  metadata.json  (+1 more)
4e/30a9838d27/: metadata.json
4f/7d2f8bd710/: metadata.json
51/dcb69e9a99/: metadata.json
67/e08a89284d/: metadata.json
80/7ab6c7207c/: metadata.json
8a/007944e0bc/: metadata.json
9e/5b678afce2/: metadata.json
a1/fc415f3f0f/: metadata.json
aa/6daa806438/: metadata.json
assets/zsh/: capture.zsh  daemon_init.zsh
b0/beedd2ab73/: metadata.json
docs/: CHANGELOG.md  OVERVIEW.md  README_JA.md  TODO.md
docs/release/: v1.0.2.md  v1.1.0.md  v1.1.1.md  v1.1.2.md  v1.11.0.md  v1.12.0.md  v1.13.0.md  v1.13.1.md  v1.13.2.md  v1.13.3.md  v1.14.0.md  v1.15.0.md  v1.2.0.md  v1.2.1.md  v1.3.0.md  v1.4.0.md  v1.5.0.md  v1.6.0.md  v1.6.1.md  v1.6.3.md  v1.8.3.md
e2/7b0ef85a0a/: metadata.json
f1/6b3cbd8ffc/: metadata.json
f1/d64cd11373/: metadata.json
githooks/: pre-push.sh
images/: jarvish-demo.rec
src/: banner.rs  config.rs  jarvis.rs  lib.rs  logging.rs  main.rs  prompt.rs
src/ai/: client.rs  markdown.rs  mod.rs  prompts.rs  stream.rs  types.rs
src/cli/: banner.rs  color.rs  completer.rs  highlighter.rs  jarvis.rs  mod.rs  prompt.rs  update_check.rs
src/config/: defaults.rs  mod.rs
src/engine/: builtin.rs  classifier.rs  dispatch.rs  exec.rs  expand.rs  io.rs  job_control.rs  mod.rs  parser.rs  pty.rs  redirect.rs  terminal.rs  typo.rs
src/shell/: ai_router.rs  editor.rs  input.rs  investigate.rs  mod.rs  rc.rs
src/storage/: blob.rs  cd_history.rs  context.rs  history.rs  mod.rs  record.rs  sanitizer.rs
tasks/: plan.md  todo.md
tests/: rc_script.rs  self_update.rs
(+125 files in other folders)
