[package]
name = "jarvish"
version = "0.1.0"
edition = "2021"
description = "Next Generation AI Integrated Shell"

[[bin]]
name = "jarvish"
path = "src/main.rs"

[dependencies]
reedline = "0.44"
os_pipe = "1.2"
tokio = { version = "1", features = ["full"] }
shell-words = "1"
anyhow = "1"
git2 = "0.19"
chrono = "0.4"
rand = "0.9"
nu-ansi-term = "0.50.3"
rusqlite = { version = "0.34", features = ["bundled"] }
sha2 = "0.10"
zstd = "0.13"
directories = "6"
async-openai = "0.27"
dotenvy = "0.15"
futures-util = "0.3"
serde_json = "1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
which = "8"
nix = { version = "0.31", features = ["term", "fs"] }
libc = "0.2"

[dev-dependencies]
tempfile = "3"
serial_test = "3"
