[package]
name = "jarvish"
version = "1.0.1"
edition = "2021"
rust-version = "1.75"
description = "Next Generation AI Integrated Shell inspired by J.A.R.V.I.S. on Marvel's Iron Man"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tominaga-h/jarvis-shell"
homepage = "https://github.com/tominaga-h/jarvis-shell"
readme = "README.md"
keywords = ["shell", "ai", "terminal", "cli", "jarvis"]
categories = ["command-line-utilities"]
authors = ["tominaga-h"]
exclude = [".env*", "images/", ".github/", "githooks/"]

[[bin]]
name = "jarvish"
path = "src/main.rs"

[dependencies]
reedline = "0.44"
os_pipe = "1.2"
tokio = { version = "1", features = ["full"] }
shell-words = "1"
anyhow = "1"
git2 = "0.19"
chrono = "0.4"
rand = "0.9"
nu-ansi-term = "0.50.3"
rusqlite = { version = "0.34", features = ["bundled"] }
sha2 = "0.10"
zstd = "0.13"
directories = "6"
async-openai = "0.27"
dotenvy = "0.15"
futures-util = "0.3"
serde_json = "1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
which = "8"
nix = { version = "0.31", features = ["term", "fs", "poll"] }
libc = "0.2"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
serial_test = "3"
